--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.3.3",
